--- a/_includes/default.html
+++ b/_includes/default.html
@@ -17,17 +17,17 @@
 	<![endif]-->
 
 	<!-- Le styles -->
-	<link href="https://takagotch.github.io/page24//assets/resources/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-	<link href="https://takagotch.github.io/page24//assets/resources/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-	<link href="https://takagotch.github.io/page24//assets/resources/syntax/syntax.css" rel="stylesheet">
-	<link href="https://takagotch.github.io/page24//assets/css/style.css" rel="stylesheet">
+	<link href="https://takagotch.github.io/page24/assets/resources/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://takagotch.github.io/page24/assets/resources/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+	<link href="https://takagotch.github.io/page24/assets/resources/syntax/syntax.css" rel="stylesheet">
+	<link href="https://takagotch.github.io/page24/assets/css/style.css" rel="stylesheet">
 
 	<!-- Le fav and touch icons -->
 	<!-- Update these with your own images
-	<link rel="shortcut icon" href="images/favicon.ico">
-	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+	<link rel="shortcut icon" href="https://takagotch.github.io/page24/images/favicon.ico">
+	<link rel="apple-touch-icon" href="https://takagotch.github.io/page24/images/apple-touch-icon.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="https://takagotch.github.io/page24/images/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="https://takagotch.github.io/page24/images/apple-touch-icon-114x114.png">
 	-->
 
 	<link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.BASE_PATH }}/feed.xml">
